Fix: Update layout and component spacing
レイアウトのグリッド構成を見直し、`grid-template`の設定を調整しました。加えて、Distance関連コンポーネントにフォントサイズと行間のリセットを追加し、一貫したデザインを実現しました。これらにより、デザインの整合性とUIの視認性を向上させました。

--- a/src/app/page.module.sass
+++ b/src/app/page.module.sass
@@ -8,12 +8,12 @@
 .main
   grid-area: main
   display: grid
-  grid-template-columns: 1fr auto auto
-  grid-template-rows: auto 1fr auto
+  grid-template-columns: 800px auto 1fr
+  grid-template-rows: auto auto auto
   grid-template-areas: "title title copyright" "content distance rocket" "content distance rocket"
   gap: 20px 24px
   box-sizing: border-box
-  padding: 48px 48px 24px 48px
+  padding: 48px 48px 0 48px
   background:
     color: #333
     image: url("/assets/images/img_bg.webp")
