--- a/src/components/Distance.sass
+++ b/src/components/Distance.sass
@@ -43,6 +43,7 @@
                       background-color: white
                       border-radius: 50%
                     .Distance_value
+                      //
             .Distance_current
               position: absolute
               bottom: 0
@@ -57,5 +58,9 @@
 
         .Distance_destination
           padding-left: 20px
+          font-size: 0
+          line-height: 0
         .Distance_source
           padding-left: 20px
+          font-size: 0
+          line-height: 0
